--- a/about/about.html
+++ b/about/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/about.css">
     <link rel="stylesheet" href="../style/style.css">
     <div class="header">
-        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
+        <h1><a href="../index.html" class="home">A Simple Way <br> Facility Management</a></h1>
         <a href="#"><img src="../assets/France.jpeg" style="width: 30px; height: 20px;" alt="French flag"></a>
         <a href="../English/about/about.html"><img src="../assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></a>
     </div>
@@ -33,10 +33,10 @@
                     <li><a href="../services/maintenance.html">Maintenance & Energy</a></li>
                     <li><a href="../services/securite.html">Sécurité & Sureté</a></li>
                     <li><a href="../services/acceuil.html">Accueil</a></li>
-                    <li><a href="../services/restauration.html">Restauration</a></li>
+                    <li><a href="../services/interim.html">Interim & Recrutement</a></li>
                 </ul>
             </li>
-            <li class="navbar"><a href="#">Implantation</a></li>
+            <li class="navbar"><a href="../implantation/implantation.html">Implantation</a></li>
             <li class="navbar"><a href="#">Engagements</a>
                 <ul class="drop">
                     <li><a href="#">Nos engagements RSE</a></li>
@@ -76,8 +76,8 @@
         <h2>ASW, Acteur majeur du facility management</h2>
         <p>
             <img src="assets/historique/lavage vitre.png" alt="laveur carreaux façade">
-            A Simple Way est l’un des leaders mondiaux du Facility Management. <br>
-            Implanté dans 20 pays sur 4 continents, ASW accompagne les entreprises et les
+            A Simple Way est l’un des leaders Africain du Facility Management. <br>
+            Implanté dans 4 pays, ASW accompagne les entreprises et les
             organisations dans l’externalisation des services aux bâtiments et aux occupants
             en apportant des solutions personnalisées créatrices de valeur. <br>
             <br>A Simple Way intervient dans les secteurs d’activités et les environnements les
@@ -89,19 +89,24 @@
         <div class="title2">
             <h2>Une offre large et integrée de services</h2>
             <ul class="logo_services">
-                <li><img src="assets/services/goutte.png" alt="propreté & serices associés">
+                <li>
+                    <img src="assets/services/goutte.png" alt="propreté & serices associés">
                     <h4>Propreté & services associés</h4>
                 </li>
-                <li><img src="assets/services/rouage.png" alt="maintenance et energie">
+                <li>
+                    <img src="assets/services/rouage.png" alt="maintenance et energie">
                     <h4>Maintenace et Energy</h4>
                 </li>
-                <li><img src="assets/services/shield.png" alt="sécurité, surveillance et sureté">
+                <li>
+                    <img src="assets/services/shield.png" alt="sécurité, surveillance et sureté">
                     <h4>Sécurité, Surveillance, Sureté</h4>
                 </li>
-                <li><img src="assets/services/récéption.png" alt="accueil et services associés">
-                    <h4>Accueil et services associés</h4>.
+                <li>
+                    <img src="assets/services/récéption.png" alt="accueil et services associés">
+                    <h4>Accueil et services associés</h4>
                 </li>
-                <li><img src="assets/services/couvert.png" alt="restauration">
+                <li>
+                    <img src="assets/services/couvert.png" alt="restauration">
                     <h4>Restauration</h4>
                 </li>
             </ul>
@@ -109,22 +114,28 @@
         <div class="title3">
             <h2>ENVIRONNEMENTS ET SECTEURS D’INTERVENTION</h2>
             <ul class="logo_environnement">
-                <li><img src="assets/pages/environnements/buildings.png" alt="tertiaire & sièges sociaux">
+                <li>
+                    <img src="assets/pages/environnements/buildings.png" alt="tertiaire & sièges sociaux">
                     <h4>Tertiaire & Sièges sociaux</h4>
                 </li>
-                <li><img src="assets/pages/environnements/shopping.png" alt="espaces de vente & services">
+                <li>
+                    <img src="assets/pages/environnements/shopping.png" alt="espaces de vente & services">
                     <h4>Espaces de vente & Services</h4>
                 </li>
-                <li><img src="assets/pages/environnements/logistic.png" alt="transport & logistique">
+                <li>
+                    <img src="assets/pages/environnements/logistic.png" alt="transport & logistique">
                     <h4>Transport & Logistique</h4>
                 </li>
-                <li><img src="assets/pages/environnements/usine.png" alt="industrie">
+                <li>
+                    <img src="assets/pages/environnements/usine.png" alt="industrie">
                     <h4>Industrie</h4>
                 </li>
-                <li><img src="assets/pages/environnements/agro.png" alt="agroalimentaire">
+                <li>
+                    <img src="assets/pages/environnements/agro.png" alt="agroalimentaire">
                     <h4>Agroalimentaire</h4>
                 </li>
-                <li><img src="assets/pages/environnements/hosto.png" alt="établissement de santé">
+                <li>
+                    <img src="assets/pages/environnements/hosto.png" alt="établissement de santé">
                     <h4>Etablissement de santé</h4>
                 </li>
             </ul>
