--- a/about/innovation.html
+++ b/about/innovation.html
@@ -10,7 +10,7 @@
 
     <div class="header">
         
-        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
+        <h1><a href="../index.html" class="home">A Simple Way <br> Facility Management</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
@@ -34,10 +34,10 @@
                     <li><a href="../services/maintenance.html">Maintenance & Energy</a></li>
                     <li><a href="../services/securite.html">Sécurité & Sureté</a></li>
                     <li><a href="../services/acceuil.html">Accueil</a></li>
-                    <li><a href="../services/restauration.html">Restauration</a></li>
+                    <li><a href="../services/interim.html">Interim & Recrutement</a></li>
                 </ul>
             </li>
-            <li class="navbar"><a href="#">Implantation</a></li>
+            <li class="navbar"><a href="../implantation/implantation.html">Implantation</a></li>
             <li class="navbar"><a href="#">Engagements</a>
                 <ul class="drop">
                     <li><a href="#">Nos engagements RSE</a></li>
@@ -110,7 +110,7 @@
             </li>
             <li class="element">
                 <h3>Audit de nettoyabilité</h3>
-                <p>Détection des risques</p> <br>
+                <p class="sous-titre">Détection des risques</p> <br>
                 <div class="categorie">Agroalimentaire </div> <br>
                 <img src="assets/pages/innovation/neon.jpg" alt="neon">
                 <p>Détermination des zones critiques d’accumulation</p>
