--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     <li><a href="services/maintenance.html">Maintenance & Energy</a></li>
                     <li><a href="services/securite.html">Sécurité & Sureté</a></li>
                     <li><a href="services/acceuil.html">Accueil</a></li>
-                    <li><a href="services/restauration.html">Restauration</a></li>
+                    <li><a href="services/interim.html">Interim & Recrutement</a></li>
                 </ul>
             </li>
-            <li class="navbar"><a href="#">Implantation</a></li>
+            <li class="navbar"><a href="implantation/implantation.html">Implantation</a></li>
             <li class="navbar"><a href="#">Engagements</a>
                 <ul class="drop">
                     <li><a href="#">Nos engagements RSE</a></li>
@@ -71,18 +71,61 @@
     </nav>
 </head>
 <body>
+    <h2 class="title">Nos Métiers Facilitent le Vôtre</h2>
     <img class="FP" src="assets/front page/building sunrise.jpg" alt="sunrise throught buildings">
-    <h1 class="présentation">Présentation</h1>
-    <p>
+    <h1 class="title">Présentation</h1>
+    <p class="présentation">
         A Simple Way, Groupe Africain du Facility Management, se caractérise par L’expérience,
         la compétence, le professionnalisme, la rigueur, le sérieux et la réactivité de son
-        personnel; ce qui lui permet de perdurer et de conserver une clientèle fidèle. <br>
+        personnel; ce qui lui permet de perdurer et de conserver une clientèle fidèle. <br><br>
         A Simple Way propose des prestations conformes aux exigences en intervenant dans les
         secteurs d’activités et les environnements les plus divers. <br>
         Aujourd’hui, ASW Maroc, dirigée par une équipe très expérimentée, vise à élargir le
         parc client au Maroc en proposant une offre globale de valeur et des solutions adaptées
         accompagnant les entreprises et les organisations  dans l’externalisation des services.
     </p>
+    <h1 class="title">Nos Offres</h1>
+    <div class="nos-offres">
+        <div class="separating-line"></div>
+        <div class="FM">
+            <a href="services/facility-management.html">
+                <img src="services/assets/offres/Facility Management.png" alt="facility-management">
+                <div>Facility Management</div>
+            </a>
+        </div>
+        <ul class="nos-offres">
+            <li>
+                <a href="services/proprete.html"><img src="services/assets/offres/goutte.png" alt="proprete">
+                <span>Propreté & Services Associés</span></a>
+            </li>
+            <li>
+                <a href="services/maintenance.html"><img src="services/assets/offres/rouage.png" alt="maintenance">
+                <span>Maintenance & Energy</span></a>
+            </li>
+            <li>
+                <a href="services/securite.html"><img src="services/assets/offres/shield.png" alt="securite">
+                <span>Sécurité & Sureté</span></a>
+            </li>
+            <li>
+                <a href="services/acceuil.html"><img src="services/assets/offres/récéption.png" alt="accueil">
+                <span>Accueil</span></a>
+            </li>
+            <li>
+                <a href="services/space"><img src="services/assets/offres/SpaceManagement.jpg" alt="interim">
+                <span>Space Management</span></a>
+            </li>
+            <li>
+                <img src="services/assets/offres/assist aero.png" alt="assistance aéroportuaire">
+                <span>Assistance Aéroportuaire</span>
+            </li>
+            <li>
+                <img src="assets/front page/human logo.jpg" alt="interim">
+                <span>Interim & Recrutement</span>
+            </li>
+        </ul>
+        <div class="separating-line"></div>
+    </div>
+    <h1 class="title">Le mot de la Direction</h1>
     <div class="mot-de-direction">
         <ul class="mot-de-direction">
             <li class="halim">
@@ -118,7 +161,7 @@
                 </p>
                 <h3>M.Abdelaziz DIOURI</h3>
                 <span>Directeur Général</span>
-                <span>ASW Facility Management</span>
+                <span>ASW Facility Management Maroc</span>
             </li>
         </ul>
     </div>
