--- a/services/facility-management.html
+++ b/services/facility-management.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="style/facility-management.css">
     <div class="header">
-        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
+        <h1><a href="../index.html" class="home">A Simple Way <br> Facility Management</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
@@ -31,10 +31,10 @@
                     <li><a href="maintenance.html">Maintenance & Energy</a></li>
                     <li><a href="securite.html">Sécurité & Sureté</a></li>
                     <li><a href="acceuil.html">Accueil</a></li>
-                    <li><a href="restauration.html">Restauration</a></li>
+                    <li><a href="interim.html">Interim & Recrutement</a></li>
                 </ul>
             </li>
-            <li class="navbar"><a href="#">Implantation</a></li>
+            <li class="navbar"><a href="../implantation/implantation.html">Implantation</a></li>
             <li class="navbar"><a href="#">Engagements</a>
                 <ul class="drop">
                     <li><a href="#">Nos engagements RSE</a></li>
@@ -83,20 +83,14 @@
             <li>transférer les risques à une entreprise dont c’est le métier.</li>
         </ul>
         <p>Avec sa large palette de savoir-faire métier et d’expertises
-            sectorielles, ATALIAN Facilities peut prendre en charge tout
+            sectorielles, A Simple Way Facility Management peut prendre en charge tout
             ou partie des services que vous souhaitez externaliser.</p>
         <p>Nos équipes pilotent des prestations multiservices ou full-service
             (FM intégré) dans des environnements nationaux et internationaux.</p>
-        <p>Nous sommes en capacité de piloter les filiales internes Atalian Global
-            Services pour plus de 85 % des prestations qui nous sont confiées et
+        <p>Nous sommes en capacité de piloter les filiales internes A Simple Way pour plus de 85 % des prestations qui nous sont confiées et
             pilotons les autres prestations en déléguant leur exécution à des
             partenaires de confiance sélectionnés en fonction de vos besoins spécifiques</p>
         <img class="FM" src="assets/Facility Management/Contract_multiservice.png" alt="contrat Multiservice/Full FM">
-        <div class="le_mot_de_eric_soriano">
-            <img src="assets/offres/Eric-soriano.png" alt="Eric SORIANO">
-            <p>Concentrez-vous sur votre stratégie, nous nous occupons du reste</p>
-            Eric Soriano – Head of International Business Development.
-        </div>
     </div>
     <h2>Nos points Forts</h2>
     <div class="points_forts">
@@ -143,7 +137,7 @@
         </div>
         <img src="assets/Facility Management/desk.jpg" alt="building office">
     </div>
-    <h2>Case Study</h2>
+    <!-- <h2>Case Study</h2>
     <div class="Case_study">
         <img src="assets/Facility Management/Airfrance.jpg" alt="AirFrance's plane">
         <div class="wrapper">
@@ -156,7 +150,7 @@
                 <li>1 millions de m² de surface de bâtiment</li>
             </ul>
         </div>
-    </div>
+    </div> -->
     <h2>SPACE MANAGEMENT : COMMENT MIEUX TRAVAILLER INDIVIDUELLEMENT ET COLLECTIVEMENT AU SERVICE DE LA PERFORMANCE ?</h2>
     <div class="space_management">
         <div class="de-flex">
@@ -176,12 +170,12 @@
     </div>
     <h2>Réferences clients</h2>
     <div class="reference">
-        <a href=""><img src="assets/Facility Management/logo/AIRFRANCE.jpg" alt=""></a>
-        <a href=""><img src="assets/Facility Management/logo/Areva.jpg" alt=""></a>
-        <a href=""><img src="assets/Facility Management/logo/Electroluxe.jpg" alt=""></a>
-        <a href=""><img src="assets/Facility Management/logo/Orange.jpg" alt=""></a>
-        <a href=""><img src="assets/Facility Management/logo/Safran.jpg" alt=""></a>
-        <a href=""><img src="assets/Facility Management/logo/Stanley Black & Decker.jpg" alt=""></a>
+        <a href="https://www.royalairmaroc.com/ma-fr"><img src="assets/Facility Management/logo/Logo_Royal_Air_Maroc.png" alt=""></a>
+        <a href="https://aml.ma/fr/"><img src="assets/Facility Management/logo/Africa_morocco_link_logo.png" alt=""></a>
+        <a href="https://www.apmterminals.com/"><img src="assets/Facility Management/logo/apm-terminals-logo.png" alt=""></a>
+        <a href="https://www.decathlon.ma/"><img src="assets/Facility Management/logo/Decathlon-logo.png" alt=""></a>
+        <a href="https://www.dachser.ma/fr/"><img src="assets/Facility Management/logo/Logo Dascher.png" alt=""></a>
+        <a href="https://www.stellantis.com/fr"><img src="assets/Facility Management/logo/Logo-groupe-PSA.jpg" alt=""></a>
     </div>
 </body>
 <div class="barre-de-contact">
