--- a/services/proprete.html
+++ b/services/proprete.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW, Notre offre</title>
-    <link rel="stylesheet" href="../../style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="shortcut icon" href="../assets/atalian-logo.png">
     <link rel="stylesheet" href="style/proprete.css">
     <div class="header">
         
-        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
+        <h1><a href="../index.html" class="home">A Simple Way <br> Facility Management</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
@@ -33,10 +33,10 @@
                     <li><a href="maintenance.html">Maintenance & Energy</a></li>
                     <li><a href="securite.html">Sécurité & Sureté</a></li>
                     <li><a href="acceuil.html">Accueil</a></li>
-                    <li><a href="restauration.html">Restauration</a></li>
+                    <li><a href="interim.html">Interim & Recrutement</a></li>
                 </ul>
             </li>
-            <li class="navbar"><a href="#">Implantation</a></li>
+            <li class="navbar"><a href="../implantation/implantation.html">Implantation</a></li>
             <li class="navbar"><a href="#">Engagements</a>
                 <ul class="drop">
                     <li><a href="#">Nos engagements RSE</a></li>
@@ -76,16 +76,16 @@
     <h2>l'expert propreté & services associés</h2>
     <div class="expert">
         <p>
-            Le Groupe ATALIAN conjugue les savoir-faire
-            et les expertises d’un leader marocain et
-            mondial de la propreté et du multi-services. </p>
+            A Simple Way conjugue les savoir-faire
+            et les expertises d’un leader marocain 
+            de la propreté et du multi-services. </p>
         <p>
             Quel que soit l’environnement : bureaux, industries,
             centres commerciaux, grandes surfaces, espaces publics
             tels que gares et aéroports, hôtels, établissements de
-            santé, le Groupe propose une gamme complète de services
+            santé, ASW propose une gamme complète de services
             de nettoyage professionnel adaptés aux besoins et exigences
-            de chaque client. ATALIAN propose également une gamme de
+            de chaque client. A Simple Way propose également une gamme de
             services complémentaires à destination des occupants.</p>
         <p>
             Découvrez ci-dessous notre offre, nos engagements,
@@ -134,7 +134,7 @@
     </div>
     <h2>Pourquoi choisir A Simple Way ?</h2>
     <div class="wrapper" id="innovation">
-        <img class="why" src="assets/Propreté & services associé/person behind a desk wearing a mask.jpg" alt="">
+        <img class="why" src="assets/Propreté & services associé/cleaning anti-covid.jpg" alt="">
         <div>
             <p class="why">
                 Solution innovante de protection de surface, attirant 
@@ -208,7 +208,7 @@
                     <li>Maintenir votre patrimoine immobilier en bon état</li>
                 </ul>
             </div>
-            <img src="assets/Propreté & services associé/walking in building.jpg" alt="walking in a building">
+            <img src="assets/Propreté & services associé/nettoyage accueuil.jpg" alt="walking in a building">
         </div>
         <div class="wrapper">
             <img src="assets/Propreté & services associé/talking on a sofa.jpg" alt="chating on a sofa">
@@ -279,6 +279,14 @@
             <img src="assets/Propreté & services associé/nos secteurs/TRANSPORT.jpg" alt="">
             <div>transport</div>
         </div>
+    </div>
+    <div class="references">
+        <h2>Nos Références</h2>
+        <ul>
+            <li><img src="assets/Propreté & services associé/Tanger City Mall.png" alt=""></li>
+            <li><img src="assets/Propreté & services associé/Ibn Batouta centre commercial.png" alt=""></li>
+            <li><img src="assets/Propreté & services associé/socco alto Centre Commercial.png" alt=""></li>
+        </ul>
     </div>
     <div class="contact">
         <h2>contacter ASW</h2>
