--- a/English/about/about.html
+++ b/English/about/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/about.css">
     <link rel="stylesheet" href="../style/style.css">
     <div class="header">
-        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
+        <h1><a href="../index.html" class="home">A Simple Way <br> Facility Management</a></h1>
         <a href="../about/about.html"><img src="../../assets/France.jpeg" style="width: 30px; height: 20px;" alt="French flag"></a>
         <a href="#"><img src="../../assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></a>
     </div>
@@ -33,10 +33,10 @@
                     <li><a href="../services/maintenance.html">Maintenance & Energy</a></li>
                     <li><a href="../services/securite.html">Sécurité & Sureté</a></li>
                     <li><a href="../services/acceuil.html">Accueil</a></li>
-                    <li><a href="../services/restauration.html">Restauration</a></li>
+                    <li><a href="../services/interim.html">Interim & Recrutement</a></li>
                 </ul>
             </li>
-            <li class="navbar"><a href="#">Implantation</a></li>
+            <li class="navbar"><a href="../implantation/implantation.html">Implantation</a></li>
             <li class="navbar"><a href="#">Engagements</a>
                 <ul class="drop">
                     <li><a href="#">Nos engagements RSE</a></li>
