--- a/English/about/key_numbers.html
+++ b/English/about/key_numbers.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         
-        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
+        <h1><a href="../index.html" class="home">A Simple Way <br> Facility Management</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
@@ -34,10 +34,10 @@
                         <li><a href="../services/maintenance.html">Maintenance & Energy</a></li>
                         <li><a href="../services/securite.html">Sécurité & Sureté</a></li>
                         <li><a href="../services/acceuil.html">Accueil</a></li>
-                        <li><a href="../services/restauration.html">Restauration</a></li>
+                        <li><a href="../services/interim.html">Interim & Recrutement</a></li>
                     </ul>
                 </li>
-                <li class="navbar"><a href="#">Implantation</a></li>
+                <li class="navbar"><a href="../implantation/implantation.html">Implantation</a></li>
                 <li class="navbar"><a href="#">Engagements</a>
                     <ul class="drop">
                         <li><a href="#">Nos engagements RSE</a></li>
