--- a/English/services/securite.html
+++ b/English/services/securite.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW, Notre offre</title>
-    <link rel="stylesheet" href="../../style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="shortcut icon" href="../assets/atalian-logo.png">
     <div class="header">
         <h1><a href="../index.html" class="home">A Simple Way <br> Facility Management</a></h1>
@@ -31,10 +31,10 @@
                     <li><a href="maintenance.html">Maintenance & Energy</a></li>
                     <li><a href="securite.html">Sécurité & Sureté</a></li>
                     <li><a href="acceuil.html">Accueil</a></li>
-                    <li><a href="restauration.html">Restauration</a></li>
+                    <li><a href="interim.html">Interim & Recrutement</a></li>
                 </ul>
             </li>
-            <li class="navbar"><a href="#">Implantation</a></li>
+            <li class="navbar"><a href="../implantation/implantation.html">Implantation</a></li>
             <li class="navbar"><a href="#">Engagements</a>
                 <ul class="drop">
                     <li><a href="#">Nos engagements RSE</a></li>
