--- a/about/key_numbers.html
+++ b/about/key_numbers.html
@@ -10,81 +10,105 @@
 </head>
 <body>
     <div class="header">
-        
-        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
+        <h1><a href="../index.html" class="home">A Simple Way <br> Facility Management</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
             <li class="navbar"><a href="../index.html"><img src="assets/atalian-logo.png" style="height: 25px; width: 25px;" alt="logo atalian"></a></li>
             <li class="navbar"><a href="#">À propos</a>
-                    <ul class="drop">
-                        <li><a href="about.html">Présentation</a></li>
-                        <li><a href="engagement.html">Nos engagements</a></li>
-                        <li><a href="values.html">Nos valeurs</a></li>
-                        <li><a href="key_numbers.html">Chiffres clés</a></li>
-                        <li><a href="innovation.html">Innovation</a></li>
-                    </ul>
-                </li>
-                <li class="navbar"><a href="#">Services</a>
-                    <ul class="drop">
-                        <li><a href="../services/covid.html">COVID-19</a></li>
-                        <li><a href="../services/offre.html">Notre offre</a></li>
-                        <li><a href="../services/facility-management.html">Facility Management</a></li>
-                        <li><a href="../services/proprete.html">Propreté & services associés</a></li>
-                        <li><a href="../services/maintenance.html">Maintenance & Energy</a></li>
-                        <li><a href="../services/securite.html">Sécurité & Sureté</a></li>
-                        <li><a href="../services/acceuil.html">Accueil</a></li>
-                        <li><a href="../services/restauration.html">Restauration</a></li>
-                    </ul>
-                </li>
-                <li class="navbar"><a href="#">Implantation</a></li>
-                <li class="navbar"><a href="#">Engagements</a>
-                    <ul class="drop">
-                        <li><a href="#">Nos engagements RSE</a></li>
-                        <li><a href="#">Nos engagements Compliance</a></li>
-                    </ul>
-                </li>
-                <li class="navbar"><a href="#"> Carrière</a>
-                    <ul class="drop">
-                        <li><a href="#">Politique Ressources Humaines</a></li>
-                        <li><a href="#">Notre Politique d'Emploi</a></li>
-                        <li><a href="#">Formation et mobilité</a></li>
-                        <li><a href="#">Nos offres d'emploi</a></li>
-                    </ul>
-                </li>
-                <li class="navbar"><a href="#">Medias</a>
-                    <ul class="drop">
-                        <li><a href="#">Actualités</a></li>
-                        <li><a href="#">Presse</a></li>
-                        <li><a href="#">Téléchargez nos brochures</a></li>
-                        <li><a href="#">Vidéos</a></li>
-                    </ul>
-                </li>
-                <li class="navbar"><a href="#">Investisseur</a>
-                    <ul class="drop">
-                        <li><a href="#">Investors News</a></li>
-                        <li><a href="#">Corporate Governance</a></li>
-                        <li><a href="#">Financial information</a></li>
-                        <li><a href="#">Investor Relation</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+                <ul class="drop">
+                    <li><a href="about.html">Présentation</a></li>
+                    <li><a href="engagement.html">Nos engagements</a></li>
+                    <li><a href="values.html">Nos valeurs</a></li>
+                    <li><a href="key_numbers.html">Chiffres clés</a></li>
+                    <li><a href="innovation.html">Innovation</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="#">Services</a>
+                <ul class="drop">
+                    <li><a href="../services/covid.html">COVID-19</a></li>
+                    <li><a href="../services/offre.html">Notre offre</a></li>
+                    <li><a href="../services/facility-management.html">Facility Management</a></li>
+                    <li><a href="../services/proprete.html">Propreté & services associés</a></li>
+                    <li><a href="../services/maintenance.html">Maintenance & Energy</a></li>
+                    <li><a href="../services/securite.html">Sécurité & Sureté</a></li>
+                    <li><a href="../services/acceuil.html">Accueil</a></li>
+                    <li><a href="../services/interim.html">Interim & Recrutement</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="../implantation/implantation.html">Implantation</a></li>
+            <li class="navbar"><a href="#">Engagements</a>
+                <ul class="drop">
+                    <li><a href="#">Nos engagements RSE</a></li>
+                    <li><a href="#">Nos engagements Compliance</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="#"> Carrière</a>
+                <ul class="drop">
+                    <li><a href="#">Politique Ressources Humaines</a></li>
+                    <li><a href="#">Notre Politique d'Emploi</a></li>
+                    <li><a href="#">Formation et mobilité</a></li>
+                    <li><a href="#">Nos offres d'emploi</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="#">Medias</a>
+                <ul class="drop">
+                    <li><a href="#">Actualités</a></li>
+                    <li><a href="#">Presse</a></li>
+                    <li><a href="#">Téléchargez nos brochures</a></li>
+                    <li><a href="#">Vidéos</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="#">Investisseur</a>
+                <ul class="drop">
+                    <li><a href="#">Investors News</a></li>
+                    <li><a href="#">Corporate Governance</a></li>
+                    <li><a href="#">Financial information</a></li>
+                    <li><a href="#">Investor Relation</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <h1 class="title">Chiffres clés</h1>
     <img class="cleaning" src="assets/Chiffres.jpg" alt="washing building's windows">
     <div class="some-numbers">
         <h2>Le groupe ASW en quelques chiffres</h2>
-        <ul class="images">
-            <li><img src="assets/pages/key_numbers/CA.png" alt="atalian-logo"></li>
-            <li><img src="assets/pages/key_numbers/employees.png" alt="atalian-logo"></li>
-            <li><img src="assets/pages/key_numbers/handshake.png" alt="atalian-logo"></li>
-        </ul>
-        <ul class="numbers">
-            <li>2,065 Mds de CA</li>
-            <li>70 600 collaborateurs</li>
-            <li>21 000 clients</li>
-        </ul>
+        <!-- <div class="places"></div> -->
+        <div class="chiffres">
+            <div>
+                <h3>Au Maroc</h3>
+                <ul class="images">
+                    <li>
+                        <img src="assets/pages/key_numbers/CA.png" alt="atalian-logo">
+                        <div>250 MMAD de CA</div>
+                    </li>
+                    <li>
+                        <img src="assets/pages/key_numbers/employees.png" alt="atalian-logo">
+                        <div>3 000 collaborateurs</div>
+                    </li>
+                    <li>
+                        <img src="assets/pages/key_numbers/handshake.png" alt="atalian-logo">
+                        <div>+250 clients</div>
+                    </li>
+                </ul>
+            </div>
+            <div class="separator"></div>
+            <div>
+                <h3>En Afrique & Moyent-Orient</h3>
+                <ul class="images">
+                    <li>
+                        <img src="assets/pages/key_numbers/CA.png" alt="atalian-logo">
+                        <div>34.2M d'euros</div>
+                    </li>
+                    <li>
+                        <img src="assets/pages/key_numbers/employees.png" alt="atalian-logo">
+                        <div>14 600 Collaborateurs</div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="evolution">
+    <!-- <div class="evolution">
         <h2>Évolution du chiffre d'affaire en millions d'euros</h2>
         <div class="graph">
             <div class="bar" style="height: 60px;">2 695</div>
@@ -100,7 +124,7 @@
             <li>2021</li>
             <li>2022</li>
         </ul>
-    </div>
+    </div> -->
     <div class="barre-de-contact">
         <ul class="CB1">
             <li><a href="contact.html">contact</a></li>
