--- a/services/offre.html
+++ b/services/offre.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="style/offer.css">
     <div class="header">
-        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
+        <h1><a href="../index.html" class="home">A Simple Way <br> Facility Management</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
@@ -31,10 +31,10 @@
                     <li><a href="maintenance.html">Maintenance & Energy</a></li>
                     <li><a href="securite.html">Sécurité & Sureté</a></li>
                     <li><a href="acceuil.html">Accueil</a></li>
-                    <li><a href="restauration.html">Restauration</a></li>
+                    <li><a href="interim.html">Interim & Recrutement</a></li>
                 </ul>
             </li>
-            <li class="navbar"><a href="#">Implantation</a></li>
+            <li class="navbar"><a href="../implantation/implantation.html">Implantation</a></li>
             <li class="navbar"><a href="#">Engagements</a>
                 <ul class="drop">
                     <li><a href="#">Nos engagements RSE</a></li>
@@ -75,7 +75,7 @@
         <h2>Une offre de services intégrée et sur mesure</h2>
         <p class="paragraph">
             <img src="assets/offres/woman.png" alt="woman folding a towel">
-            ATALIAN propose des solutions personnalisées, depuis la prise en
+            A Simple Way propose des solutions personnalisées, depuis la prise en
             charge d’un ou plusieurs services spécifiques, jusqu’au pilotage
             de l’ensemble des services généraux. <br>
             <br>
@@ -93,12 +93,12 @@
         <h2>Des solutions sur mesure</h2>
         <p class="paragraph">
             Avec sa large palette de savoir-faire métier et d’expertises sectorielles,
-            ATALIAN peut prendre en charge tout ou partie des services que vous souhaitez
+            ASW peut prendre en charge tout ou partie des services que vous souhaitez
             externaliser. Ses équipes peuvent délivrer des prestations mono-services,
             multiservices ou full-service (FM intégré) en fonction de vos besoins, de
             votre organisation et de vos budgets. <br>
             <br>
-            ATALIAN effectue en propre plus de 85 % des prestations qui lui sont confiées
+            ASW effectue en propre plus de 85 % des prestations qui lui sont confiées
             et pilote les autres prestations en déléguant leur exécution à des partenaires
             de confiance sélectionnés pour leur qualité de service irréprochable.
             <img src="assets/offres/building.png" alt="building windows wash">
@@ -114,12 +114,11 @@
     <h2>toutes les expertises du groupe</h2>
     <ul class="expertise">
         <li>
-            <img src="assets/offres/Facility Management.png" alt="plate">
+            <img src="assets/offres/assist aero.png" alt="plate">
             <div>
                 <h3>Assistance aéroportuaire</h3>
                 <p>
-                    Une gamme complète de services de restauration : gestion de cantines
-                    d’entreprise, de cafés et de cafétérias, restauration événementielle traiteur.
+                    Une gamme complète de services d'assistance en aéroport.
                 </p>
             </div>
         </li>
@@ -179,7 +178,7 @@
             </div>
         </li>
         <li>
-            <img src="assets/offres/assist aero.png" alt="plate">
+            <img src="assets/offres/couvert.png" alt="plate">
             <div>
                 <h3>Restauration</h3>
                 <p>
