[UPDATE] Adding jobs offers page and contact page connected to the intranet. References switched to the beginning of the page with a spawning description. Freed of overcharging elements

--- a/carriere/Politique-RH.html
+++ b/carriere/Politique-RH.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/Politique-RH.css">
     <link rel="stylesheet" href="../style/style.css">
     <div class="header">
-        <h1><a href="../index.html" class="home">A Simple Way <br> Facility Management</a></h1>
+        <h1><a href="../index.html" class="home">ASW</a></h1>
         <a href="#"><img src="../assets/France.jpeg" style="width: 30px; height: 20px;" alt="French flag"></a>
         <a href="../English/about/about.html"><img src="../assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></a>
     </div>
@@ -47,26 +47,16 @@
                 <ul class="drop">
                     <li><a href="Politique-RH.html">Politique Ressources Humaines</a></li>
                     <li><a href="Politique-emploi.html">Notre Politique d'Emploi</a></li>
-                    <li><a href="#">Formation et mobilité</a></li>
                     <li><a href="../carriere/Offres-emploi.php">Nos offres d'emploi</a></li>
                 </ul>
             </li>
             <li class="navbar"><a href="#">Medias</a>
                 <ul class="drop">
                     <li><a href="#">Actualités</a></li>
-                    <li><a href="#">Presse</a></li>
                     <li><a href="#">Téléchargez nos brochures</a></li>
-                    <li><a href="#">Vidéos</a></li>
                 </ul>
             </li>
-            <li class="navbar"><a href="#">Investisseur</a>
-                <ul class="drop">
-                    <li><a href="#">Investors News</a></li>
-                    <li><a href="#">Corporate Governance</a></li>
-                    <li><a href="#">Financial information</a></li>
-                    <li><a href="#">Investor Relation</a></li>
-                </ul>
-            </li>
+             
             <li class="navbar"><a href="../contact/Contact.php">Contact</a>
         </ul>
     </nav>
@@ -103,10 +93,9 @@
                 <p id="2">
                     En proposant un dispositif innovant de gestion des carrières, ASW
                     permet aux collaborateurs de se projeter dans un véritable développement
-                    de compétences. Présent dans 20 pays à travers l’Europe, l’Asie du Sud-Est,
-                    l’Afrique et l’Amérique du nord, ASW offre non seulement une évolution
-                    fonctionnelle mais aussi de nombreuses opportunités de mobilité géographique,
-                    au travers de ses agences de proximité en France et ses implantations internationales.
+                    de compétences. ASW offre non seulement une évolution fonctionnelle mais
+                    aussi de nombreuses opportunités de mobilité géographique, au travers de
+                    ses agences de proximité Au Maroc et ses implantations en Afrique.
                 </p>
             </div>
         </div>
@@ -126,14 +115,16 @@
             </div>
         </div>
     </div>
-    <script>
-        function display_text(id) {
-            var text = document.getElementById(id);
-            if (text.style.display === "block") {
-                text.style.display = "none";
-                return;
-            }
-            text.style.display = "block";
-        }
-    </script>
+    <div class="barre-de-contact">
+        <ul class="CB1">
+            <li><a href="Contact.php">contact</a></li>
+            <li><a href="about.html">à propos de nous</a></li>
+            <li>carrière</li>
+        </ul>
+        <ul class="CB2">
+            <li>contact</li>
+            <li>à propos de nous</li>
+            <li>carrière</li>
+        </ul>
+    </div>
 </body>
