[ADD] Animated References added to the interim page

--- a/services/interim.html
+++ b/services/interim.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../assets/atalian-logo.png">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="style/interim.css">
+    <link rel="stylesheet" href="style/references.css">
     <div class="header">
         <h1><a href="../index.html" class="home">ASW</a></h1>
     </div>
@@ -64,16 +65,60 @@
 </head>
 <body>
     <h1 class="title">Interim & Recrutement</h1>
-    <img class="" src="" alt="">
-    <h2>Nos prestations</h2>
-    <div class="prestations">
-        <ul>
-            <li>Gestion de collaborateurs en prestation de sous-traitance & Intérim</li>
-            <li>Gestion de contrats CDI & temporaires</li>
-            <li>Recrutement</li>
-        </ul>
+    <div class="flex-ref">
+        <div class="ref">
+            <h2 class="nos-ref">Nos références</h2>
+            <ul>
+                <li>
+                    <img style="width: 200px;" src="assets/Interim & Recrutement/servair.png" alt="Ibn Batouta Centre Commercial">
+                    <div class="hiden" style="display: none; opacity: 0;">
+                        <p class="description">
+                            Servair est un  leader de son activité dans l’agro-alimentaire,
+                            fournitures des plateaux repas pour le secteur aéronautiques. 
+                            <br>
+                        </p>
+                        <p class="caractéristique">
+                            Effectif: 250 agents.<br>
+                            Démarage: 2018.<br>
+                            CA Annuel : 300 MDH.<br>
+                        </p>
+                    </div>
+                </li>
+                <li>
+                    <img style="width: 200px;" src="assets/Interim & Recrutement/APM Terminals.png" alt="Tanger City Mall">
+                    <div class="hiden" style="display: none; opacity: 0;">
+                        <p class="description">
+                            APM Terminals Tangier est l’un des principaux opérateurs de terminaux
+                            au Maroc, C’est le troisième port à conteneurs le plus fréquenté d’Afrique.
+                            <br>
+                        </p>
+                        <p class="caractéristique">
+                            Prestation délivrée:
+                            <ul style="color: white;">
+                                <li style="color: white;">Gestion Multi-prestations/métiers sur site</li>
+                                <li style="color: white;">Lashing, Lashing Reefer, Driving, Gate, …</li>
+                            </ul>
+                            Effectif: Plus de 200 agents<br>
+                            Démarage: 2018.<br>
+                        </p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <script src="../reference.js"></script>
+        <div>
+            <h2 class="presta">Nos prestations</h2>
+            <img class="main" src="assets/Interim & Recrutement/interim.jpg" alt="">
+            <div class="prestations">
+                <ul>
+                    <li>Gestion de collaborateurs en prestation de sous-traitance & Intérim</li>
+                    <li>Gestion de contrats CDI & temporaires</li>
+                    <li>Recrutement</li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <h2>Notre proposition</h2>
+    <h2 class="presta">Notre proposition</h2>
     <div class="proposition">
         <div class="wrapper">
             <h3>Vos Problématiques</h3>
@@ -97,11 +142,6 @@
                 <li>Enquêtes de satisfaction permettant l’amélioration continue de notre prestation</li>
             </ul>
         </div>
-    </div>
-    <h2>Références</h2>
-    <div class="ref">
-        <img src="assets/Interim & Recrutement/servair.png" alt="servair">
-        <img src="assets/Interim & Recrutement/APM Terminals.png" alt="APM Terminals">
     </div>
     <div class="barre-de-contact">
         <ul class="CB1">
